# spectra-qe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
demo/: github_repos_openapi.yaml  petstore_openapi.yaml
demo/recordings/: github_generate.jsonl  github_risk.jsonl  petstore_generate.jsonl  petstore_risk.jsonl
qe_platform/: __init__.py  cli.py  config.py
qe_platform/api/: app.py  demo_specs.py  schemas.py  streaming.py
qe_platform/execution/: runner.py  self_healer.py
qe_platform/generation/: case_deduplicator.py  prompts.py  test_generator.py
qe_platform/ingestion/: risk_scorer.py  spec_parser.py
qe_platform/models/: __init__.py  report.py  risk.py  spec.py  test_case.py
qe_platform/observability/: token_dashboard.py  trace_logger.py
qe_platform/report/: report_generator.py
tests/: conftest.py
tests/unit/: test_api.py  test_cli.py  test_deduplicator.py  test_models.py  test_report_generator.py  test_spec_parser.py
ui/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
ui/src/: App.jsx  index.css  main.jsx
ui/src/components/: Badge.jsx  Card.jsx  Layout.jsx  LoadingSpinner.jsx  PipelineMonitor.jsx  RunHistory.jsx
ui/src/hooks/: usePipeline.js
ui/src/lib/: api.js  stream.js
ui/src/pages/: Dashboard.jsx  Guide.jsx  Reports.jsx  RiskScorer.jsx  SpecParser.jsx  TestGenerator.jsx
ui/src/store/: appStore.js  pipelineStore.js
