[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qe-platform"
version = "0.1.0"
description = "AI-powered QE test generation platform"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Shraman Gupta", email = "gupta.shraman@gmail.com"}]
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.50.0",
    "anthropic>=0.34.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.47.0"]
observability = [
    "langsmith>=0.1.120",
    "wandb>=0.18.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]
all = ["qe-platform[playwright,observability,dev]"]

[project.scripts]
qe-platform = "qe_platform.cli:cli"

[tool.setuptools.packages.find]
include = ["qe_platform*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require LLM API keys)",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py310"
